<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fitness</string>

    <string name="txt_label1_splash">Work out at home!</string>
    <string name="txt_label2_splash">Make your training to the next level\nand become a BEAST</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txt_step_1_4">Step 1 of 4</string>
    <string name="txt_step_2_4">Step 2 of 4</string>
    <string name="txt_step_3_4">Step 3 of 4</string>
    <string name="txt_step_4_4">Step 4 of 4</string>
    <string name="txt_step_format">Step %d of 4</string>
    <string name="txt_welcome_step1"><font color='#1B1C2E'>Welcome to</font>\n<font color='#7165E3'>Fitness</font> <font color='#1B1C2E'>Application</font></string>
    <string name="txt_content_step1">Personalized workouts will help you\ngain strength, get in better shape and\nembrace a healthy lifestyle</string>
    <string name="txt_get_started">Get started</string>
    <string name="txt_step2_label_1">Let us know you better</string>
    <string name="txt_step2_label_2">Select your fitness level</string>
    <string name="txt_step2_label_3">You are new to fitness training</string>

    <string name="txt_step2_label_5">You have been training regularly</string>
    <string name="txt_step2_label_6">Advanced</string>
    <string name="txt_step2_label_7" tools:ignore="StringEscaping">You’re fit and ready for an intensive workout plan</string>
    <string name="txt_step2_label_8">I’m not sure</string>
    <string name="txt_step3_label_1">Personal Detail</string>
    <string name="txt_step3_label_2">Let us know about you to speed up the\nresult, Get fit with your personal workout plan!</string>
    <string name="txt_step4_label_1">Your plan is ready!</string>
    <string name="txt_step4_label_2">Your change starts today!</string>
    <string name="txt_routine_label_1">Quarantine at home</string>
    <string name="txt_routine_label_2">Trainning goal</string>
    <string name="txt_routine_label_3">Guess you might need</string>

    <string name="txt_beginer">Beginer</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_intermediate">Intermediate</string>
    <string name="menu_training">Training</string>
    <string name="menu_rountine">Rountine</string>
    <string name="menu_report">Report</string>
    <string name="menu_setting">Setting</string>
    <string name="txt_cm_unit">cm/kg</string>
    <string name="txt_ft_unit">ft/lbs</string>
    <string name="txt_weight">Weight</string>
    <string name="txt_height">Height</string>
    <string name="txt_current">Current</string>
    <string name="txt_date_of_birth">Date of birth</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_start">Start</string>
    <string name="txt_quit">Quit</string>
    <string name="txt_animation">Animation</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_congratulation">congratulations</string>
    <string name="txt_completed">Completed!</string>
    <string name="txt_kcal">Kcal</string>
    <string name="txt_exercise">Exercises</string>
    <string name="txt_home">Home</string>
    <string name="txt_bmi">BMI(kg/m )</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_label_healthy">Healthy weight</string>
    <string name="txt_calendar">Calendar</string>
    <string name="txt_default">Default</string>
    <string name="txt_total">Total</string>
    <string name="txt_record">RECORDS</string>
    <string name="txt_workout">WORKOUT</string>
    <string name="txt_duration">DURATION</string>
    <string name="txt_support_us">Support Us</string>
    <string name="txt_label_setting1">Last synchronization:</string>
    <string name="txt_label_setting2">Upgrade to remove ads</string>
    <string name="txt_remove_ads">Remove ads</string>
    <string name="txt_general_setting">General Settings</string>
    <string name="txt_item_setting1">Sound options</string>
    <string name="txt_item_setting2">Test voice</string>
    <string name="txt_item_setting3">Select TTS Engine</string>
    <string name="txt_item_setting4">Download TTS Engine</string>
    <string name="txt_item_setting5">Voice language</string>
    <string name="txt_item_setting6">Download more TTS language data</string>
    <string name="txt_item_setting7">Device TTS Setting</string>
    <string name="txt_item_setting8">Sync to Google Fit</string>
    <string name="txt_item_setting9">Remind me to workout everyday</string>
    <string name="txt_item_setting10">Metric &amp; Imperial Units</string>
    <string name="txt_item_setting11">Language options</string>
    <string name="txt_item_setting12">Restart progress</string>
    <string name="txt_item_setting13">Delete all data</string>
    <string name="txt_item_setting14">Rate us</string>
    <string name="txt_item_setting15">Share with friends</string>
    <string name="txt_item_setting16">Feedback</string>
    <string name="txt_item_setting17">Privacy policy</string>
    <string name="txt_item_setting18">Version </string>
    <string name="txt_item_setting19">Health Data</string>
    <string name="txt_item_setting20">Pico TTS</string>
    <string name="txt_item_setting21">Health Data</string>
    <string name="txt_workout_setting">Workout</string>

    <string name="txt_title_training"><font color='#7165E3'>Fitness</font> <font color='#1B1C2E'>Workout</font> </string>
    <string name="txt_ready">Ready to go</string>
    <string name="txt_title_exercise1">Straight Arm Knee Plank</string>
    <string name="txt_item_1_dialog_exrcise">Just take a look</string>
    <string name="txt_item_2_dialog_exrcise">Too hard</string>
    <string name="txt_item_3_dialog_exrcise">Don’t know how to do it</string>
    <string name="txt_title_setting">SETTINGS</string>

</resources>