<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_training"
            android:title="@string/menu_training" />
        <item
            android:id="@+id/nav_routine"
            android:icon="@drawable/ic_rountine"
            android:title="@string/menu_rountine" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>