<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen18"
        android:layout_marginTop="@dimen/dimen30"
        android:clickable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStep4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen30"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/txt_step_4_4"
        android:textColor="@color/color_text_step"
        android:textSize="@dimen/sp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStep4Label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen80"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/txt_step4_label_1"
        android:textColor="@color/color_content_step1"
        android:textSize="@dimen/sp16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvStep4" />

    <TextView
        android:id="@+id/tvStep4Label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen6"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txt_step4_label_2"
        android:textColor="@color/color_wellcome_step1"
        android:textSize="@dimen/sp20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStep4Label1" />

    <Button
        android:id="@+id/btnContinueStep4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen42"
        android:layout_marginHorizontal="@dimen/dimen46"
        android:layout_marginBottom="@dimen/dimen62"
        android:background="@drawable/bg_button_started"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_continue"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen22"
        android:layout_marginTop="@dimen/dimen40"
        android:src="@drawable/img_step4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStep4Label2" />

</androidx.constraintlayout.widget.ConstraintLayout>