<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen10"
        android:paddingBottom="@dimen/dimen10">

        <View
            android:id="@+id/viewLeftRoutine1"
            android:layout_width="@dimen/dimen2"
            android:layout_height="@dimen/dimen12"
            android:background="@color/color_view_left_label_routine"
            app:layout_constraintBottom_toBottomOf="@+id/tvRoutineLabel1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRoutineLabel1" />

        <TextView
            android:id="@+id/tvRoutineLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen6"
            android:layout_marginTop="@dimen/dimen30"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/txt_routine_label_1"
            android:textColor="@color/color_wellcome_step1"
            android:textSize="@dimen/sp16"
            app:layout_constraintLeft_toLeftOf="@+id/viewLeftRoutine1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvRoutine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRoutineLabel1" />

        <View
            android:id="@+id/viewLeftRoutine2"
            android:layout_width="@dimen/dimen2"
            android:layout_height="@dimen/dimen12"
            android:background="@color/color_view_left_label_routine"
            app:layout_constraintBottom_toBottomOf="@+id/tvRoutineLabel2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRoutineLabel2" />

        <TextView
            android:id="@+id/tvRoutineLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen6"
            android:layout_marginTop="@dimen/dimen30"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/txt_routine_label_2"
            android:textColor="@color/color_wellcome_step1"
            android:textSize="@dimen/sp16"
            app:layout_constraintLeft_toLeftOf="@+id/viewLeftRoutine2"
            app:layout_constraintTop_toBottomOf="@+id/rcvRoutine1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvRoutine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRoutineLabel2" />

        <View
            android:id="@+id/viewLeftRoutine3"
            android:layout_width="@dimen/dimen2"
            android:layout_height="@dimen/dimen12"
            android:background="@color/color_view_left_label_routine"
            app:layout_constraintBottom_toBottomOf="@+id/tvRoutineLabel3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRoutineLabel3" />

        <TextView
            android:id="@+id/tvRoutineLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen6"
            android:layout_marginTop="@dimen/dimen30"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/txt_routine_label_3"
            android:textColor="@color/color_wellcome_step1"
            android:textSize="@dimen/sp16"
            app:layout_constraintLeft_toLeftOf="@+id/viewLeftRoutine3"
            app:layout_constraintTop_toBottomOf="@+id/rcvRoutine2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvRoutine3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRoutineLabel3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>